# eic-opticks

./: .dockerignore  .readthedocs.yaml  CMakeLists.txt  Dockerfile  README.md  opticks.bash  pyproject.toml
.devcontainer/: devcontainer.json
.devcontainer/codespace/: devcontainer.json
.github/workflows/: build-pull-request.yaml  build-push.yaml  delete_untagged.py  release.yaml
CSG/: CMakeLists.txt  CSGFoundry.cc  CSGImport.cc  CSGView.cc  csg_intersect_leaf_newcone.h
CSG/tests/: CMakeLists.txt  CSGDemoTest.cc  CSGTestRunner.sh  csg_intersect_leaf_test.sh
CSGOptiX/: CMakeLists.txt  CSGOptiX.cc  CSGOptiX7.cu  cxs_min.sh  cxt_min.sh
CSGOptiX/tests/: CMakeLists.txt  CSGOptiXRenderInteractiveTest.cc  CSGOptiXRenderTest.cc  CSGOptiXRenderTest.sh  CSGOptiXSimtraceTest.cc
ana/: CMakeLists.txt  histype.py  input_photons.sh  pvplt.py
ana/tests/: CMakeLists.txt
analytic/: CMakeLists.txt
analytic/tests/: CMakeLists.txt
cmake/: Config.cmake.in  FindOptiX.cmake
cmake/Modules/: FindOptiX.cmake  FindOpticksCUDA.cmake  OpticksBuildOptions.cmake  OpticksCUDAFlags.cmake  OpticksCXXFlags.cmake
config/: dev.json  sphere_leak.json
cudarap/: CMakeLists.txt
dd4hepplugins/: CMakeLists.txt  OpticsEvent.cc  OpticsEvent.hh  OpticsPhysics.cc  OpticsPhysics.hh  OpticsRun.cc  OpticsRun.hh  OpticsSteppingAction.cc  OpticsSteppingAction.hh
docs/: api.md  conf.py  docker.md  geometry.md  getting-started.md  index.rst  performance.md  running.md
examples/: CMakeLists.txt  README.md  opengate_benchmark_cpu_vs_gpu.py  simphox.cpp  validate_opengate_opticks.py
examples/dd4hep/: test_raindrop_cpu.py  test_raindrop_dd4hep.py
examples/dd4hep/geometry/: raindrop_dd4hep.xml
extg4/: CMakeLists.txt
g4cx/: CMakeLists.txt  G4CXOpticks.cc  G4CXOpticks.hh
g4cx/tests/: CMakeLists.txt  G4CXOpticks_setGeometry_Test.sh
gdxml/: CMakeLists.txt
gdxml/tests/: CMakeLists.txt  GDXMLTest.cc
okconf/: CMakeLists.txt
okconf/tests/: CMakeLists.txt
opengate_opticks/: GateOpticksActor.cpp  GateOpticksActor.h  README.md  opticksactors.py  pyGateOpticksActor.cpp
opengate_opticks/patches/: CMakeLists.txt.patch  CMakeLists_link.txt.patch  managers.py.patch  opengate_core.cpp.patch
optiphy/tools/: generate_input_photons.py  input_photons.py  plot-csg.py  plot_csg.py  run_performance.py  serve_path.py
qudarap/: CMakeLists.txt  QEvent.cc  QEvt.cc  QEvt.hh  QSim.cc  QSim.hh  QSim__Desc.sh  QU.cc  QU.hh  qsim.h  qudarap.bash
qudarap/tests/: CMakeLists.txt  QPMTTest.sh  QPMT_MockTest.sh  QPMT_Test.sh  rng_sequence.py
scripts/: setup_opengate_integration.sh  submit.sh
spack/: Dockerfile  README.md  bash.nonint  bash.runtime
src/: CMakeLists.txt  EventBatcher.h  GPUCerenkov.cpp  GPUCerenkov.h  GPUPhotonFileSource.cpp  GPUPhotonFileSource.h  GPUPhotonSource.cpp  GPUPhotonSource.h  GPUPhotonSourceMinimal.cpp  GPUPhotonSourceMinimal.h  GPURaytrace.cpp  GPURaytrace.h  config.cpp  config.h  config.h.in  configurator.cpp  configurator.h  consgeo.cc  g4app.h  g4appmt.h  simg4ox.cpp  simg4oxmt.cpp  simtox.cpp  torch.cpp  torch.h
sysrap/: CMakeLists.txt  NP.hh  NPFold.h  NPU.hh  OpticksGenstep.h  OpticksPhoton.cc  SComp.h  SEventConfig.cc  SEventConfig.hh  SEvt.cc  SEvt.hh  SGLFW.h  SGLFW_Mesh.h  SGLM.h  SMesh.h  SMeta.hh  SOPTIX.h  SProc.cc  SRecord.h  SStackFrame.h  SSys.cc  SSys.hh  np.h  s_tv.h  scontext.h  scuda.h  sdigest.h  sevent.h  sevt.py  smath.h  sn.h  snd.cc  sphoton.h  sproc.h  ssincos.h  sstr.h  storch.h  storchtype.h  stra.h  sxf.h
sysrap/SGLFW_tests/: CMakeLists.txt
sysrap/tests/: CMakeLists.txt  OpticksPhotonTest.cc  SGLFW_tests.cc  SRngSpecTest.cc  SSimTest.cc  SStackFrameTest.cc  SSysTest.cc  curand_uniform_test.sh  sdevice_test.cc  sdigest_test.cc  sdigest_test.sh
tests/: compare_ab.py  run_multi.mac  test_GPUPhotonFileSource.sh  test_GPUPhotonSource_8x8SiPM.sh  test_GPURaytrace.sh  test_opengate_eic-opticks_cerenkov.py  test_opengate_eic-opticks_scintillation.py  test_opticks.sh  test_opticks_cerenkov.py  test_pyvista.py  test_simg4ox.sh
tests/geom/: 8x8SiPM_w_CSI_optial_grease.gdml  CrystalOpticalProperties.xml  CrystalSurfaceProperties.xml  SurfaceProperties.xml  WaterOpticalProperties.xml  basic_detector.gdml  opticks_raindrop.gdml  opticks_raindrop_with_scintillation.gdml  pfrich_min_FINAL.gdml  sphere_leak.gdml
u4/: CMakeLists.txt  U4.cc  U4Solid.h  U4SolidMaker.cc  U4Surface.h  U4Transform.h  U4Tree.h
u4/tests/: CMakeLists.txt  U4TransformTest.cc
