[project]
name = "optiphy"
version = "0.0.0"
description = ""
authors = [ { name = "Dmitri Smirnov", email = "dmixsmi@gmail.com" } ]
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.0.0",
    "pyvista>=0.43.8",
    "plotly>=5.22.0",
]

[project.scripts]
generate_input_photons = "optiphy.tools.generate_input_photons:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
